--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-  # API Gateway
   api-gateway:
     build:
       context: .
@@ -14,7 +13,6 @@ services:
     networks:
       - domain-registrar-network
 
-  # Redis для rate limiting и кэширования
   redis:
     image: redis:7-alpine
     container_name: redis
@@ -26,24 +24,37 @@ services:
       - domain-registrar-network
     command: redis-server --appendonly yes
 
-  # PostgreSQL (для будущих сервисов)
-  # postgres:
-  #   image: postgres:15-alpine
-  #   container_name: postgres
-  #   environment:
-  #     POSTGRES_DB: domain_registrar
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: postgres
-  #   ports:
-  #     - "5432:5432"
-  #   volumes:
-  #     - postgres-data:/var/lib/postgresql/data
-  #   networks:
-  #     - domain-registrar-network
+  domain-order-service:
+    build:
+      context: .
+      dockerfile: domain-order-service/Dockerfile
+    container_name: domain-order-service
+    ports:
+      - "8082:8082"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - postgres
+    networks:
+      - domain-registrar-network
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres
+    environment:
+      POSTGRES_DB: domain_order_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - domain-registrar-network
 
 volumes:
   redis-data:
-  # postgres-data:
+  postgres-data:
 
 networks:
   domain-registrar-network:
