fix(backend): fix api-gateway redirect

--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -10,7 +10,7 @@ spring:
             - StripPrefix=1
         
         - id: domain-service
-          uri: http://domain-service:8082
+          uri: http://domain-order-service:8082
           predicates:
             - Path=/api/domains/**, /api/orders/**, /api/zones/**
           filters:
