--- a/domain-order-service/src/main/resources/application.yml
+++ b/domain-order-service/src/main/resources/application.yml
@@ -9,9 +9,11 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     show-sql: false
     properties:
       hibernate:
