feat(domain-order): add HikariCP

--- a/domain-order-service/src/main/resources/application.yml
+++ b/domain-order-service/src/main/resources/application.yml
@@ -9,6 +9,14 @@ spring:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+    hikari:
+      pool-name: DomainOrderHikariPool
+      minimum-idle: 5
+      maximum-pool-size: 20
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      leak-detection-threshold: 60000
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
   jpa:
