feat(domain-order): add CRUD methods for cart, domain, order

--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -12,7 +12,7 @@ spring:
         - id: domain-service
           uri: http://domain-order-service:8082
           predicates:
-            - Path=/api/domains/**, /api/orders/**, /api/zones/**
+            - Path=/api/domains/**, /api/orders/**, /api/zones/**, /api/cart/**
           filters:
             - StripPrefix=1
         
