--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
         - id: domain-service
           uri: http://localhost:8082
           predicates:
-            - Path=/api/domains/**, /api/orders/**, /api/zones/**
+            - Path=/api/domains/**, /api/orders/**, /api/zones/**, /api/cart/**
           filters:
             - StripPrefix=1
         
