--- a/domain-order-service/Dockerfile
+++ b/domain-order-service/Dockerfile
@@ -8,7 +8,9 @@ COPY common/build.gradle.kts ./common/
 COPY domain-order-service/src ./domain-order-service/src
 COPY common/src ./common/src
 
-RUN gradle :domain-order-service:bootJar --no-daemon
+RUN gradle :domain-order-service:bootJar --no-daemon \
+    --refresh-dependencies \
+    -Dorg.gradle.jvmargs="-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts -Dhttps.protocols=TLSv1.2,TLSv1.3"
 
 FROM eclipse-temurin:17-jre-jammy
 WORKDIR /app
