--- a/domain-order-service/src/main/resources/application.yml
+++ b/domain-order-service/src/main/resources/application.yml
@@ -27,6 +27,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+        jdbc:
+          use_get_generated_keys: true
+        temp:
+          use_jdbc_metadata_defaults: false
 
 management:
   endpoints:
