--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,9 +52,38 @@ services:
     networks:
       - domain-registrar-network
 
+  notification-service:
+    build:
+      context: .
+      dockerfile: notification-service/Dockerfile
+    container_name: notification-service
+    ports:
+      - "8085:8085"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - postgres-notification
+    networks:
+      - domain-registrar-network
+
+  postgres-notification:
+    image: postgres:15-alpine
+    container_name: postgres-notification
+    environment:
+      POSTGRES_DB: notification_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres-notification-data:/var/lib/postgresql/data
+    networks:
+      - domain-registrar-network
+
 volumes:
   redis-data:
   postgres-domain-order-data:
+  postgres-notification-data:
 
 networks:
   domain-registrar-network:
