--- a/notification-service/src/main/resources/application-docker.yml
+++ b/notification-service/src/main/resources/application-docker.yml
@@ -3,3 +3,18 @@ spring:
     url: jdbc:postgresql://postgres-notification:5432/notification_db
     username: postgres
     password: postgres
+  mail:
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:}
+    from: ${MAIL_FROM:noreply@hrofors.ru}
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
