feat(auth): add registration

--- a/auth-service/src/main/resources/application-docker.yml
+++ b/auth-service/src/main/resources/application-docker.yml
@@ -3,3 +3,12 @@ spring:
     url: jdbc:postgresql://postgres-auth:5432/auth_db
     username: postgres
     password: postgres
+
+services:
+  notification:
+    url: http://notification-service:8085
+  api-gateway:
+    url: http://api-gateway:8080
+
+verification:
+  base-url: http://localhost:8080
