--- a/notification-service/src/main/resources/application-docker.yml
+++ b/notification-service/src/main/resources/application-docker.yml
@@ -18,3 +18,7 @@ spring:
           connectiontimeout: 5000
           timeout: 5000
           writetimeout: 5000
+
+services:
+  auth:
+    url: http://auth-service:8081
