--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -50,6 +50,11 @@ services:
 verification:
   base-url: http://localhost:8080
 
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+  access-token-expiration-minutes: 15
+  refresh-token-expiration-days: 30
+
 logging:
   level:
     ru.itmo: INFO
