feat(auth): add totp 2fa

--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -55,6 +55,9 @@ jwt:
   access-token-expiration-minutes: 15
   refresh-token-expiration-days: 30
 
+app:
+  name: Domain Registrar
+
 logging:
   level:
     ru.itmo: INFO
