--- a/auth-service/src/main/resources/application-docker.yml
+++ b/auth-service/src/main/resources/application-docker.yml
@@ -17,3 +17,6 @@ jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
   access-token-expiration-minutes: 15
   refresh-token-expiration-days: 30
+
+app:
+  name: Domain Registrar
