--- a/auth-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/auth-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,6 @@ databaseChangeLog:
   - include:
       file: changes/refresh_token/001-create-table.sql
       relativeToChangelogFile: true
+  - include:
+      file: changes/auth_factor/001-create-enum-and-table.sql
+      relativeToChangelogFile: true
