feat(domain-order): add jwt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     container_name: domain-order-service
     ports:
       - "8082:8082"
+    env_file:
+      - .env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -59,6 +61,8 @@ services:
     container_name: auth-service
     ports:
       - "8081:8081"
+    env_file:
+      - .env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
