--- a/domain-order-service/src/main/resources/application-docker.yml
+++ b/domain-order-service/src/main/resources/application-docker.yml
@@ -3,3 +3,6 @@ spring:
     url: jdbc:postgresql://postgres-domain-order:5432/domain_order_db
     username: postgres
     password: postgres
+
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
