--- a/domain-order-service/src/main/resources/application.yml
+++ b/domain-order-service/src/main/resources/application.yml
@@ -41,7 +41,10 @@ management:
     health:
       show-details: always
 
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+
 logging:
-  level:
-    ru.itmo: INFO
-    org.springframework.web: INFO
+    level:
+      ru.itmo: INFO
+      org.springframework.web: INFO
