feat(notification): add jwt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,8 @@ services:
     container_name: notification-service
     ports:
       - "8085:8085"
+    env_file:
+      - .env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - MAIL_HOST=${MAIL_HOST:-smtp.yandex.ru}
