--- a/notification-service/src/main/resources/application-docker.yml
+++ b/notification-service/src/main/resources/application-docker.yml
@@ -22,3 +22,12 @@ spring:
 services:
   auth:
     url: http://auth-service:8081
+
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+  access-token-expiration-minutes: 15
+  refresh-token-expiration-days: 30
+
+logging:
+  level:
+    ru.itmo.notification.security: DEBUG
