--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -66,7 +66,13 @@ services:
   auth:
     url: http://localhost:8081
 
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+  access-token-expiration-minutes: 15
+  refresh-token-expiration-days: 30
+
 logging:
   level:
     ru.itmo: INFO
+    ru.itmo.notification.security: DEBUG
     org.springframework.web: INFO
