--- a/auth-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/auth-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,6 +15,9 @@ databaseChangeLog:
       file: changes/user/004-rename-admin-to-is-admin.sql
       relativeToChangelogFile: true
   - include:
+      file: changes/user/005-remove-first-last-name.sql
+      relativeToChangelogFile: true
+  - include:
       file: changes/refresh_token/001-create-table.sql
       relativeToChangelogFile: true
   - include:
