Add cache to docker

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -3,9 +3,11 @@ WORKDIR /app
 
 ENV GRADLE_OPTS="-Dhttps.protocols=TLSv1.2,TLSv1.3"
 
-COPY build.gradle.kts settings.gradle.kts ./
+COPY build.gradle.kts settings.gradle.kts gradle.properties ./
 COPY auth-service/build.gradle.kts ./auth-service/
 COPY common/build.gradle.kts ./common/
+
+RUN gradle :auth-service:dependencies --no-daemon
 
 COPY auth-service/src ./auth-service/src
 COPY common/src ./common/src
