feat(domain-order): implement methods for dns

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -12,42 +12,35 @@ spring:
           predicates:
             - Path=/api/auth/**, /api/users/**
           filters:
-            - StripPrefix=2
+            - StripPrefix=1
         
         - id: domain-service
           uri: http://localhost:8082
           predicates:
-            - Path=/api/domains/**, /api/orders/**, /api/zones/**, /api/cart/**
+            - Path=/api/domains/**, /api/orders/**, /api/zones/**, /api/cart/**, /api/dns/**
           filters:
-            - StripPrefix=2
+            - StripPrefix=1
         
         - id: payment-service
           uri: http://localhost:8083
           predicates:
             - Path=/api/payments/**
           filters:
-            - StripPrefix=2
-        
-        - id: dns-service
-          uri: http://localhost:8084
-          predicates:
-            - Path=/api/dns/**
-          filters:
-            - StripPrefix=2
+            - StripPrefix=1
         
         - id: notification-service
           uri: http://localhost:8085
           predicates:
             - Path=/api/notifications/**
           filters:
-            - StripPrefix=2
+            - StripPrefix=1
         
         - id: admin-service
           uri: http://localhost:8086
           predicates:
             - Path=/api/admin/**
           filters:
-            - StripPrefix=2
+            - StripPrefix=1
 
   data:
     redis:
