--- a/domain-order-service/src/main/resources/application-docker.yml
+++ b/domain-order-service/src/main/resources/application-docker.yml
@@ -6,3 +6,7 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+
+exdns:
+  url: ${EXDNS_URL:http://exdns:8080}
+  api-token: ${EXDNS_API_TOKEN:changeme}
