--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -20,35 +20,35 @@ spring:
           predicates:
             - Path=/api/auth/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=${API_GATEWAY_STRIP_PREFIX:1}
         
         - id: domain-service
           uri: http://domain-order-service:8082
           predicates:
             - Path=/api/domains/**, /api/orders/**, /api/zones/**, /api/cart/**, /api/dns/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=${API_GATEWAY_STRIP_PREFIX:1}
         
         - id: payment-service
           uri: http://payment-service:8083
           predicates:
             - Path=/api/payments/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=${API_GATEWAY_STRIP_PREFIX:1}
         
         - id: notification-service
           uri: http://notification-service:8085
           predicates:
             - Path=/api/notifications/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=${API_GATEWAY_STRIP_PREFIX:1}
         
         - id: admin-service
           uri: http://admin-service:8086
           predicates:
             - Path=/api/admin/**
           filters:
-            - StripPrefix=1
+            - StripPrefix=${API_GATEWAY_STRIP_PREFIX:1}
 
   data:
     redis:
