feat(domain): add create l2 domain method

--- a/domain-service/src/main/resources/application.yml
+++ b/domain-service/src/main/resources/application.yml
@@ -43,3 +43,4 @@ logging:
   level:
     ru.itmo: INFO
     org.springframework.web: INFO
+    org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: DEBUG
