--- a/.gitignore
+++ b/.gitignore
@@ -114,4 +114,29 @@ spring-boot-*.log
 report/*.md
 *.md
 scripts/
-exdns/
+
+# The directory Mix will write compiled artifacts to.
+/exdns/_build/
+
+# If you run "mix test --cover", coverage assets end up here.
+/exdns/cover/
+
+# The directory Mix downloads your dependencies sources to.
+/exdns/deps/
+
+# Where third-party dependencies like ExDoc output generated docs.
+/exdns/doc/
+
+# If the VM crashes, it generates a dump, let's ignore it too.
+/exdns/erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
+/exdns/*.ez
+
+# Ignore package tarball (built via "mix hex.build").
+/exdns/exdns-*.tar
+
+# Temporary files, for example, from tests.
+/exdns/tmp/
+
+/exdns/zones
