--- a/domain-service/src/main/resources/application.yml
+++ b/domain-service/src/main/resources/application.yml
@@ -39,6 +39,11 @@ openapi:
   domainService:
     base-path: /api
 
+exdns:
+  client:
+    base-url: http://localhost:8000
+    api-token: changeme
+
 logging:
   level:
     ru.itmo: INFO
