--- a/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: changes/001-create-domain-and-dns-record.sql
       relativeToChangelogFile: true
+  - include:
+      file: changes/002-add-domain-version.sql
+      relativeToChangelogFile: true
