fix(domain): fix http paths

--- a/api-gateway/src/main/resources/application-docker.yml
+++ b/api-gateway/src/main/resources/application-docker.yml
@@ -25,7 +25,7 @@ spring:
         - id: domain-service
           uri: http://domain-service:8082
           predicates:
-            - Path=/api/domains/**, /api/health
+            - Path=/api/domains/**
           filters:
             - StripPrefix=${API_GATEWAY_STRIP_PREFIX:1}
         
