--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -37,6 +37,9 @@ openapi:
   orderService:
     base-path: /orders
 
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+
 logging:
   level:
     ru.itmo: INFO
