--- a/order-service/src/main/resources/application-docker.yml
+++ b/order-service/src/main/resources/application-docker.yml
@@ -6,3 +6,7 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+
+domain:
+  monthly-price: ${DOMAIN_MONTHLY_PRICE:200}
+  yearly-discount: ${DOMAIN_YEARLY_DISCOUNT:0.7}
