--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -40,6 +40,10 @@ openapi:
 jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
 
+domain:
+  monthly-price: ${DOMAIN_MONTHLY_PRICE:200}
+  yearly-discount: ${DOMAIN_YEARLY_DISCOUNT:0.7}
+
 logging:
   level:
     ru.itmo: INFO
