--- a/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: changes/002-add-domain-version.sql
       relativeToChangelogFile: true
+  - include:
+      file: changes/003-create-bad-words-table.sql
+      relativeToChangelogFile: true
