--- a/domain-service/src/main/resources/application.yml
+++ b/domain-service/src/main/resources/application.yml
@@ -44,6 +44,9 @@ exdns:
     base-url: http://localhost:8000
     api-token: changeme
 
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+
 logging:
   level:
     ru.itmo: INFO
