--- a/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: changes/003-create-bad-words-table.sql
       relativeToChangelogFile: true
+  - include:
+      file: changes/004-add-user-id-to-domain.sql
+      relativeToChangelogFile: true
