feat(order): add checkout

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,10 +129,13 @@ services:
     container_name: order-service
     ports:
       - "8084:8084"
+    env_file:
+      - .env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - postgres-order
+      - domain-service
     networks:
       - domain-registrar-network
 
