--- a/admin-service/src/main/resources/application-docker.yml
+++ b/admin-service/src/main/resources/application-docker.yml
@@ -1,2 +1,10 @@
 jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
+
+auth:
+  client:
+    base-url: http://auth-service:8081
+
+domain:
+  client:
+    base-url: http://domain-service:8082
