--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -26,6 +26,14 @@ openapi:
 jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
 
+auth:
+  client:
+    base-url: ${AUTH_SERVICE_URL:http://localhost:8081}
+
+domain:
+  client:
+    base-url: ${DOMAIN_SERVICE_URL:http://localhost:8082}
+
 logging:
   level:
     ru.itmo: INFO
