--- a/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,6 @@ databaseChangeLog:
   - include:
       file: changes/004-add-user-id-to-domain.sql
       relativeToChangelogFile: true
+  - include:
+      file: changes/005-add-activated-finished-at.sql
+      relativeToChangelogFile: true
