feat(audit): init

--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -34,6 +34,10 @@ domain:
   client:
     base-url: ${DOMAIN_SERVICE_URL:http://localhost:8082}
 
+audit:
+  client:
+    base-url: ${AUDIT_SERVICE_URL:http://localhost:8087}
+
 logging:
   level:
     ru.itmo: INFO
