--- a/auth-service/src/main/resources/application-docker.yml
+++ b/auth-service/src/main/resources/application-docker.yml
@@ -18,5 +18,9 @@ jwt:
   access-token-expiration-minutes: 15
   refresh-token-expiration-days: 30
 
+audit:
+  client:
+    base-url: http://audit-service:8087
+
 app:
   name: Domain Registrar
