feat(domain-and-notification): add notifications for domain activating and renewing

--- a/domain-service/src/main/resources/application-docker.yml
+++ b/domain-service/src/main/resources/application-docker.yml
@@ -16,6 +16,10 @@ exdns:
     base-url: http://exdns:8000
     api-token: ${EXDNS_API_TOKEN:-changeme}
 
+services:
+  notification:
+    url: http://notification-service:8085
+
 audit:
   client:
     base-url: http://audit-service:8087
