--- a/domain-service/src/main/resources/application.yml
+++ b/domain-service/src/main/resources/application.yml
@@ -47,6 +47,10 @@ exdns:
 jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
 
+services:
+  notification:
+    url: ${NOTIFICATION_SERVICE_URL:http://localhost:8085}
+
 audit:
   client:
     base-url: ${AUDIT_SERVICE_URL:http://localhost:8087}
