feat(scheduler): init

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,6 +167,24 @@ services:
     networks:
       - domain-registrar-network
 
+  scheduler-service:
+    build:
+      context: .
+      dockerfile: scheduler-service/Dockerfile
+    container_name: scheduler-service
+    ports:
+      - "8088:8088"
+    env_file:
+      - .env
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - domain-service
+      - auth-service
+      - notification-service
+    networks:
+      - domain-registrar-network
+
   audit-service:
     build:
       context: .
