--- a/audit-service/src/main/resources/application.yml
+++ b/audit-service/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
+jwt:
+  secret: ${JWT_SECRET:D4cFXy68Cmd/vD8tSyRsEDcsMkaTwRH0mjWlxXBNhDE=}
+
 management:
   endpoints:
     web:
