--- a/payment-service/src/main/resources/application-docker.yml
+++ b/payment-service/src/main/resources/application-docker.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres-order:5432/order_db
+    url: jdbc:postgresql://postgres-payment:5432/payment_db
     username: postgres
     password: postgres
 
@@ -8,14 +8,15 @@ jwt:
   secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-security}
 
 domain:
-  monthly-price: ${DOMAIN_MONTHLY_PRICE:200}
-  yearly-discount: ${DOMAIN_YEARLY_DISCOUNT:0.7}
   client:
     base-url: http://domain-service:8082
 
-payment:
+yookassa:
   client:
-    base-url: http://payment-service:8083
+    shop-id: ${YOOKASSA_SHOP_ID:}
+    secret-key: ${YOOKASSA_SECRET_KEY:}
+    return-url: ${YOOKASSA_RETURN_URL:http://localhost:3000/payment/return}
+    description-prefix: ${YOOKASSA_DESCRIPTION_PREFIX:Domain payment}
 
 audit:
   client:
