--- a/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/domain-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -14,3 +14,6 @@ databaseChangeLog:
   - include:
       file: changes/005-add-activated-finished-at.sql
       relativeToChangelogFile: true
+  - include:
+      file: changes/006-create-domain-reservation.sql
+      relativeToChangelogFile: true
